--- a/GUI/FluidGUI/mainwindow.ui
+++ b/GUI/FluidGUI/mainwindow.ui
@@ -27,8 +27,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>30</y>
+      <x>570</x>
+      <y>20</y>
       <width>80</width>
       <height>25</height>
      </rect>
@@ -43,14 +43,28 @@
       <x>20</x>
       <y>10</y>
       <width>261</width>
-      <height>47</height>
+      <height>51</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
+     <item row="1" column="0">
+      <widget class="QSlider" name="ViscositySlider">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
      <item row="0" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
         <string>Viscosity</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QSlider" name="DiffusionSlider">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
@@ -61,17 +75,13 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
-      <widget class="QSlider" name="ViscositySlider">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-      </widget>
+     <item row="1" column="2">
+      <widget class="QPlainTextEdit" name="plainTextEdit"/>
      </item>
-     <item row="1" column="1">
-      <widget class="QSlider" name="DiffusionSlider">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+     <item row="0" column="2">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>TextLabel</string>
        </property>
       </widget>
      </item>
