--- a/GUI/FluidGUI/mainwindow.ui
+++ b/GUI/FluidGUI/mainwindow.ui
@@ -37,18 +37,27 @@
      <string>Start</string>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>20</x>
       <y>10</y>
       <width>261</width>
-      <height>51</height>
+      <height>95</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="1" column="0">
       <widget class="QSlider" name="ViscositySlider">
+       <property name="minimum">
+        <number>2</number>
+       </property>
+       <property name="maximum">
+        <number>101</number>
+       </property>
+       <property name="singleStep">
+        <number>25</number>
+       </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
@@ -63,6 +72,9 @@
      </item>
      <item row="1" column="1">
       <widget class="QSlider" name="DiffusionSlider">
+       <property name="minimum">
+        <number>2</number>
+       </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
@@ -76,12 +88,19 @@
       </widget>
      </item>
      <item row="1" column="2">
-      <widget class="QPlainTextEdit" name="plainTextEdit"/>
+      <widget class="QPlainTextEdit" name="plainTextEdit">
+       <property name="plainText">
+        <string/>
+       </property>
+       <property name="placeholderText">
+        <string>ms</string>
+       </property>
+      </widget>
      </item>
      <item row="0" column="2">
       <widget class="QLabel" name="label_3">
        <property name="text">
-        <string>TextLabel</string>
+        <string>Time step</string>
        </property>
       </widget>
      </item>
@@ -94,7 +113,7 @@
      <x>0</x>
      <y>0</y>
      <width>1111</width>
-     <height>26</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
