--- a/GUI/FluidGUI/mainwindow.ui
+++ b/GUI/FluidGUI/mainwindow.ui
@@ -23,6 +23,12 @@
       <height>90</height>
      </rect>
     </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
    </widget>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
