tylko pixMapItem w graphicView nie jest smart pointerem

--- a/GUI/FluidGUI/mainwindow.ui
+++ b/GUI/FluidGUI/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1111</width>
+    <width>987</width>
     <height>720</height>
    </rect>
   </property>
@@ -17,8 +17,8 @@
    <widget class="MyGraphicsView" name="graphicsView">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>80</y>
+      <x>20</x>
+      <y>120</y>
       <width>250</width>
       <height>250</height>
      </rect>
@@ -49,7 +49,7 @@
       <x>20</x>
       <y>10</y>
       <width>741</width>
-      <height>61</height>
+      <height>51</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
@@ -169,13 +169,33 @@
      </item>
     </layout>
    </widget>
+   <widget class="QComboBox" name="comboBox">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>80</y>
+      <width>261</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>orginal</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>cuda</string>
+     </property>
+    </item>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1111</width>
+     <width>987</width>
      <height>22</height>
     </rect>
    </property>
