--- a/GUI/FluidGUI/mainwindow.ui
+++ b/GUI/FluidGUI/mainwindow.ui
@@ -49,7 +49,7 @@
       <x>20</x>
       <y>10</y>
       <width>741</width>
-      <height>51</height>
+      <height>61</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
@@ -181,6 +181,16 @@
     <item>
      <property name="text">
       <string>orginal</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>edited</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>openMP</string>
      </property>
     </item>
     <item>
